syntax = "proto3";
package edges;

option go_package = "github.com/snple/kirara/pb/edges;edges";

import "option_message.proto";
import "generic_message.proto";

message OptionListRequest {
    pb.Page page = 1;
    // string device_id = 2;
    string tags = 3;
    string type = 4;
}

message OptionListResponse {
    pb.Page page = 1;
    uint32 count = 2;
    repeated pb.Option option = 3;
}

message OptionLinkRequest {
    string id = 1;
    sint32 status = 2;
}

message OptionCloneRequest {
    string id = 1;
    // string device_id = 2;
}

message OptionPullRequest {
    int64 after = 1;
    uint32 limit = 2;
    // string device_id = 3;
    string type = 4;
}

message OptionPullResponse {
    int64 after = 1;
    uint32 limit = 2;
    repeated pb.Option option = 3;
}

service OptionService {
    rpc Create(pb.Option) returns (pb.Option) {}
    rpc Update(pb.Option) returns (pb.Option) {}
    rpc View(pb.Id) returns (pb.Option) {}
    rpc Name(pb.Name) returns (pb.Option) {}
    rpc Delete(pb.Id) returns (pb.MyBool) {}
    rpc List(OptionListRequest) returns (OptionListResponse) {}
    rpc Clone(OptionCloneRequest) returns (pb.MyBool) {}
    rpc ViewWithDeleted(pb.Id) returns (pb.Option) {}
    rpc Pull(OptionPullRequest) returns (OptionPullResponse) {}
    rpc Sync(pb.Option) returns (pb.MyBool) {}
}
